# barracuda-mission-planner

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/: pull_request_template.md
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/barracuda_mission_planner/: CMakeLists.txt  package.xml
catkin_ws/src/barracuda_mission_planner/config/: commands.txt
catkin_ws/src/barracuda_mission_planner/launch/: all_nodes.launch  mission_routine.launch  mission_with_sequencer.launch  object_to_waypoints.launch  pipeline_test.launch
catkin_ws/src/barracuda_mission_planner/scripts/: mission_command_sequencer_node.py  mission_routine_node.py  object_to_waypoints_node.py  test_pipeline_node.py
issues/: 1
