<?xml version="1.0"?>
<package format="2">
  <name>barracuda_mission_planner</name>
  <version>0.0.0</version>
  <description>Skeleton package for Barracuda mission planner.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>barracuda_msgs</depend>

  <export/>
</package>
